# spark-mcp

./: PLAN.md  README.md  claude_config.json  pyproject.toml  verify_all_tools.py
.claude/: settings.local.json
spark_mcp/: config.py  database.py  pdf_operations.py  server.py
tests/: conftest.py  test_security.py  test_sender_filter.py
